--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
     "sucrase": "^3.13.0"
+  },
+  "scripts": {
+    "dev": "nodemon src/server.js"
   }
 }
